--- a/vignettes/my-vignette.Rmd
+++ b/vignettes/my-vignette.Rmd
@@ -25,14 +25,29 @@ knitr::opts_chunk$set(
 library(depositWatch)
 ```
 ### Objectives
-•	Detect unusual customer deposit behaviour dynamically
-•	Allow flexible, user-defined thresholds for anomaly detection
-•	Provide clear output for reporting, visualization, and further analysis
+•	Detect unusual customer deposit behaviour dynamically  
+•	Allow flexible, user-defined thresholds for anomaly detection  
+•	Provide clear output for reporting, visualization, and further analysis  
 •	Maintain scalability and efficiency for large datasets
+
+
+### Package Workflow / Pipeline
+A high-level workflow diagram or step-by-step narrative of how the functions interact:
+
+•	new_deposit_dataset() → prepares the data.  
+•	detect_anomalies() → identifies anomalies.  
+•	summary() → generates reports.  
+•	plot() → visualizes anomalies.  
 
 
 ### Data
 The data should be a deposit transactions dataframe having there columns, customer_id, date and amount. 
+
+customer_id: character/factor  
+date: Date class  
+amount: numeric  
+
+The package includes a sample dataset transactions with the required columns as an example.
 
 ```{r load-data, echo=TRUE}
 data("transactions", package = "depositWatch")
@@ -45,13 +60,32 @@ The package has four functions:
 1. new_deposit_dataset(): This is an S3 constructer that takes a deposit dataset as input and converts it into a "deposit_dataset" class
 
 ```{r Input}
-#ds = new_deposit_dataset(transactions)
+ds <- new_deposit_dataset(transactions)
 ```
 
 
 2. detect_anomalies(): It takes a deposit_dataset object as input, which contains transaction-level data, and computes rolling statistics such as rolling mean and rolling standard deviation for each customer. The method flags anomalies using two criteria: the first is when a daily total deposit deviates significantly from the rolling mean, exceeding a user-defined Z-score threshold, and the second is when the number of transactions within a day exceeds a frequency threshold, even if the total amount is within normal limits. If both conditions are met simultaneously, the record is flagged as “Both.” The output is a new deposit_dataset object containing a summary of anomalies per customer, including the total count of flagged days and the types of flags encountered.
 
-```{r Results}
+This function uses C++ function rollingStats to calculate rolling metrics, rolling mean and standard deviation.
 
+```{r Results}
+ds <- detect_anomalies(ds)
 ```
 
+3. summary(): This method provides a concise view of the anomaly detection results stored in a deposit_dataset object after running detect_anomalies(). It prints a per-customer summary that shows the number of times each customer was flagged and the types of anomalies detected. Additionally, the method allows the user to export this summary to an Excel file by specifying a file path. The export leverages the openxlsx package, enabling integration with reporting or compliance workflows. By separating computation (detect_anomalies()) from presentation (summary()), the design ensures that users can quickly access the results, inspect anomaly patterns, and optionally generate external reports, all without recalculating the rolling statistics or flags.
+
+```{r Summary}
+ds1 <- summary(ds,excel_path = "anomaly_summary.xlsx")
+```
+
+4. plot(): Creates two monthly time-series visualizations:  
+o	The total number of anomalies detected per calendar month.  
+o	The number of unique customers who experienced at least one anomaly per calendar month
+
+```{r, eval=FALSE}
+plot(ds)
+```
+
+```{r pressure, echo=FALSE}
+plot(ds)
+```
